# NyuziToolchain

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  configure  merge-upstream.sh
autoconf/: AutoRegen.sh  config.sub  configure.ac
bindings/ocaml/backends/: META.llvm_backend.in  llvm_backend.mli.in
bindings/ocaml/linker/: llvm_linker.ml  llvm_linker.mli
cmake/: config-ix.cmake
cmake/modules/: AddLLVM.cmake  LLVMExternalProjectUtils.cmake
examples/Kaleidoscope/MCJIT/: README.txt
include/llvm/ADT/: Triple.h
include/llvm/BinaryFormat/: ELF.h
include/llvm/Config/: config.h.in
include/llvm/IR/: Intrinsics.td  IntrinsicsNyuzi.td  (+1 more)
lib/MC/: MCObjectFileInfo.cpp
lib/Object/: ELF.cpp  ELFYAML.cpp  RelocationResolver.cpp
lib/ObjectYAML/: ELFYAML.cpp
lib/Support/: TargetRegistry.cpp  Triple.cpp
projects/: Makefile
projects/sample/: configure
runtimes/: CMakeLists.txt
runtimes/compiler-rt/: CMakeLists.txt
test/DebugInfo/: missing-abstract-variable.ll
test/FileCheck/: dos-style-eol.txt
test/MC/Nyuzi/: li.s  (+42 more)
test/TableGen/: defmclass.td
tools/: CMakeLists.txt  LLVMBuild.txt  Makefile
tools/clang/: CMakeLists.txt
tools/elf2hex/: CMakeLists.txt  LLVMBuild.txt  Makefile  elf2hex.cpp
tools/lldb/: CMakeLists.txt
tools/lldb/tools/: CMakeLists.txt
tools/lldb/tools/debugserver/source/: CMakeLists.txt
tools/llvm-ar/: llvm-ar.cpp
tools/llvm-mc/: CMakeLists.txt
tools/llvm-objdump/: llvm-objdump.cpp
tools/llvm-readobj/: ELFDumper.cpp
tools/llvm-stress/: llvm-stress.cpp
tools/mclinker/: CMakeLists.txt
tools/spmd-compile/: AstNode.cpp  AstNode.h  CMakeLists.txt  Makefile  Parser.yy  README.md  SPMDBuilder.cpp  SPMDBuilder.h  Scanner.ll  Symbol.h  main.cpp
tools/spmd-compile/src/: AstNode.cpp  AstNode.h  CMakeLists.txt  LLVMBuild.txt  Parser.yy  SPMDBuilder.cpp  SPMDBuilder.h  Symbol.h  main.cpp
tools/spmd-compile/test/: CMakeLists.txt  for-loop.c  gcd.c  if.c  lit.cfg  lit.site.cfg.in  nestedif.c  return.c
utils/vim/: llvm.vim
(+371 files in other folders)
